# slicewise-delivery-predict

./: .gitignore  LICENSE  README.md  justfile  main.py  pyproject.toml
data/raw/: delivery_history.csv.dvc
notebooks/: 01_eda_initial.ipynb
src/: generate_data.py
